rigidd/postgres.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: replyboost-postgres-service
  namespace: default
  labels:
    app: replyboost-postgres
spec:
  type: ClusterIP
  selector:
    app: replyboost-postgres
  ports:
    - port: 5432
      targetPort: 5432
