rigidd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: replyboost-api-service
  namespace: replyboost
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: /
    prometheus.io/port: "80"
  labels:
    app: replyboost-api
spec:
  type: ClusterIP
  selector:
    app: replyboost-api
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
